--- a/blog.html
+++ b/blog.html
@@ -161,7 +161,7 @@ Overall, I'm optimistic about discovering some dark horse movies that may have s
 
   <!-- Intro blog post -->
       <section class="blog-post">
-        <h2><a href="moviebuffsmb.blogspot.com">Welcome to Our Blog</a></h2>
+        <h2><a href="https://moviebuffsblogs.wordpress.com/">Welcome to Our Blog</a></h2>
         <div class="blog-content">
       <p>
         This is the introductory blog post where we, the Movie Buffs, will share our thoughts on the latest films, TV shows, and everything related to cinema.
