--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Stephen's headshot and bio -->
     <div class="team-member">
       <img src="assets/stephen.jpg" alt="Stephen's Headshot">
-      <h2>Stephen <a href="https://letterboxd.com/swchavez/"></a></h2>
+      <h2><a href="https://letterboxd.com/swchavez/"> Stephen</a></h2>
       <p>
         A former political aficionado turned tech industry enthusiast. Stephen is a movie connoisseur with an affinity for all genres, especially those that touch the heart or provide motivation. He has a special weakness for movie sagas and enjoys films that wrap up beautifully, leaving a lasting impact.
       </p>
@@ -40,7 +40,7 @@
     <!-- Austin's headshot and bio -->
     <div class="team-member">
       <img src="assets/austin.jpg" alt="Austin's Headshot">
-      <h2>Austin <a href="https://letterboxd.com/aharm96/"></a></h2>
+      <h2><a href="https://letterboxd.com/aharm96/"> Austin </a></h2>
       <p>
         Or should I say "Dr. Austin," Austin may not have a cinema doctorate, but he's undoubtedly one of the most intense movie enthusiasts in our group. He revels in thought-provoking and intense films, always seeking the deep hits that leave a profound impression.
       </p>
