--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
       </p>
     </div>
 
-    <!-- Ben's headshot and bio -->
+    <!-- Sam's headshot and bio -->
     <div class="team-member">
-      <img src="assets/ben.jpg" alt="Ben's Headshot">
-      <h2>Ben</h2>
+      <img src="assets/sam.jpg" alt="Ben's Headshot">
+      <h2>Sam</h2>
       <p>
-        As melodious with movie reviews as he is with his singing and guitar skills, Ben's captivating voice could charm anyone. Prepare for sweet and harmonious reviews from this musical movie buff.
+        Our newest Movie Buff extraordinaire, renowned for his encyclopedic knowledge across all genres and the ability to resonate with any movie across all levels. Sam is a student of cinema, the youngest of four and the youngest of the group, but don't let his youth fool you—his ability to learn and gain wisdom from his elders adds depth to his unique perspective.
       </p>
     </div>
 
