--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <img src="assets/sam.jpg" alt="Ben's Headshot">
       <h2>Sam</h2>
       <p>
-        Our newest Movie Buff extraordinaire, renowned for his encyclopedic knowledge across all genres and the ability to resonate with any movie across all levels. Sam is a student of cinema, the youngest of four and the youngest of the group, but don't let his youth fool you—his ability to learn and gain wisdom from his elders adds depth to his unique perspective.
+        Renowned for his encyclopedic knowledge across all genres and the ability to resonate with any movie across all levels. Sam is a student of cinema, the youngest of four and the youngest of the group, but don't let his youth fool you—his ability to learn and gain wisdom from his elders adds depth to his unique perspective.
       </p>
     </div>
 
