--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
 
   <div class="cover-photo">
     <!-- Placeholder for your cover photo -->
-    <img src="assets/group.jpg" alt="Cover Photo">
+    <img src="assets/scgroup.jpg" alt="Cover Photo">
   </div>
 
   <section class="team-bios">
