--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <img src="assets/stephen.jpg" alt="Stephen's Headshot">
       <h2><a href="https://letterboxd.com/swchavez/"> Stephen</a></h2>
       <p>
-        A former political aficionado turned tech industry enthusiast. Stephen is a movie connoisseur with an affinity for all genres, especially those that touch the heart or provide motivation. He has a special weakness for movie sagas and enjoys films that wrap up beautifully, leaving a lasting impact.
+        Stephen, a hot take aficionado and self-proclaimed generalist, prides himself on a knowledge of width rather than depth after dabbling in multiple fields. He has an affinity for all genres, especially those that drive pathos. Always attempting to note his bias, he's quick to point out if a movie is genuinely good or if it just made him laugh or cry.
       </p>
     </div>
 
